--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     gtag('config', 'G-ZQ8S5CFG5X');
   </script>
 
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="theme-color" content="#000000" id="theme-color-meta">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="description" content="The personal portfolio and identity system of Moinuddin Ahmad — iOS developer, designer, and creative engineer -- shift is standard; design is craft.">
+  <meta name="description" content="The personal portfolio and identity system of Moinuddin Ahmad — iOS developer, designer, and creative engineer building within the Apple ecosystem - shift is standard; design is craft.">
   <meta name="keywords" content="Moinuddin Ahmad, iOS Developer, Swift Engineer, SwiftUI, Creative Technologist, Interface Design, Mobile App Development, Apple Ecosystem, Front-end Architecture, iamshift, shift ∴ Moin">
   <title>shift ∴ Moin</title>
 
@@ -49,7 +50,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://iamshift.dev/">
   <meta property="og:title" content="shift ∴ Moin">
-  <meta property="og:description" content="The personal portfolio and identity system of Moinuddin Ahmad - shift is standard; design is craft.">
+  <meta property="og:description" content="The personal portfolio and identity system of Moinuddin Ahmad — iOS developer, designer, and creative engineer building within the Apple ecosystem - shift is standard; design is craft.">
   <meta property="og:image" content="https://iamshift.dev/assets/social-share.png"> 
 
   <meta name="twitter:card" content="summary_large_image">
