Update redirect message in 404.html

--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
       <p class="mono"><span class="status-ok">[ OK ]</span>  Rerouting to origin point (iamshift.dev)...</p>
       <br>
       <p class="mono">
-        >> Redirecting
+        >>> Redirecting
         <span class="loading-ellipsis">...</span>
       </p>
     </div>
